# go-fluent-automation

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  debug_dump.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
src/: main.py
src/classes/: activity.py  cli.py  dotenv.py  learning.py  logger.py  question.py  scraper.py  solving.py
src/classes/q/: fill_gaps_block_question.py  fill_gaps_text_question.py  match_text_question.py  multi_choice_image_question.py  multi_choice_text_question.py  scrambled_letters_question.py  scrambled_sentences_question.py  short_text_question.py
src/classes/questions/: fill_gaps_block_question.py  fill_gaps_text_question.py  match_text_question.py  multi_choice_image_question.py  multi_choice_text_question.py  question.py  scrambled_letters_question.py  scrambled_sentences_question.py  short_text_question.py
src/constants/: credentials.py  selectors.py
src/runners/: auto_run.py  simple_run.py
src/utils/: ai.py  cache.py  date.py  fs.py  lists.py  parser.py  strings.py
